[package]
authors = ["lgfrbcsgo"]
license = "Apache-2.0/MIT"
name = "gold-visibility-creator-wasm"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.image]
version = "0.21.1"
default-features = false
features = ["dxt"]

[dependencies.zip]
version = "0.5.2"
default-features = false

[dependencies]
ddsfile = "0.2.3"
error-chain = "0.12.1"
wasm-bindgen = "0.2.25"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[features]
default = ["console_error_panic_hook", "wee_alloc"]
