[package]
authors = ["lgfrbcsgo"]
license = "Apache-2.0/MIT"
name = "gold-visibility-creator-wasm"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.image]
version = "0.21.1"
default-features = false
features = ["dxt", "png_codec"]

[dependencies]
ddsfile = "0.2.3"
error-chain = "0.12.1"
wasm-bindgen = "0.2.47"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.4", optional = true }

[features]
default = ["console_error_panic_hook", "wee_alloc"]
